[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MenuOverlay.gd" type="Script" id=1]
[ext_resource path="res://scripts/Score.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.356863, 0.356863, 1 )
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[node name="MenuOverlay" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 540.0
custom_constants/separation = 186

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 14.0
text = "Game Over"
align = 1

[node name="Score" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 200.0
margin_right = 924.0
margin_bottom = 214.0
text = "Score: "
align = 1
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 400.0
margin_right = 924.0
margin_bottom = 460.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 433.0
margin_right = 490.0
margin_bottom = 60.0
custom_constants/separation = 20

[node name="Next Level" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
visible = false
margin_right = 80.0
margin_bottom = 20.0
text = "Next Level"

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 57.0
margin_bottom = 60.0
text = "Quit"

[connection signal="score" from="." to="PanelContainer/MarginContainer/Rows/Score" method="_on_MenuOverlay_score"]
[connection signal="readyRead" from="PanelContainer/MarginContainer/Rows/Score" to="." method="_on_Score_readyRead"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Next Level" to="." method="_on_Next_Level_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Quit" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
